--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
+        .container h2 {
+            border-bottom: 2px solid #0078d4;
+            padding-bottom: 10px;
+        }
         footer {
             text-align: center;
             padding: 1rem 0;
@@ -63,6 +67,7 @@
 <body>
     <header>
         <h1>Azerbaycan Qarabağlılar Dərnəyi</h1>
+        <p>Qarabağın zəngin tarixi və mədəniyyətini yaşatmaq üçün birlikdəyik!</p>
     </header>
     <nav>
         <ul>
@@ -74,25 +79,30 @@
     <div class="container">
         <section id="about">
             <h2>Haqqımızda</h2>
-            <p>Azerbaycan Qarabağlılar Dərnəyi, Qarabağ mədəniyyətini tanıtmaq, tarixi yaddaşımızı qorumaq və bu istiqamətdə dəstək fəaliyyəti göstərmək məqsədilə qurulmuşdur. Biz birlikdə güclüyük!</p>
+            <p>Azerbaycan Qarabağlılar Dərnəyi, Qarabağın zəngin mədəni irsini tanıtmaq və qorumaq məqsədilə fəaliyyət göstərir. Dərnəyimiz, Qarabağ tarixini, adət-ənənələrini və mədəniyyətini gələcək nəsillərə çatdırmaq üçün müxtəlif layihələr həyata keçirir.</p>
+            <p>Bizim məqsədimiz, Qarabağın dərin köklü mədəniyyətini beynəlxalq aləmdə tanıtmaq və bu istiqamətdə həmvətənlərimiz arasında birlik yaratmaqdır.</p>
         </section>
         <section id="activities">
             <h2>Fəaliyyətlərimiz</h2>
             <ul>
-                <li>Qarabağ tarixi və mədəniyyəti ilə bağlı seminarlar</li>
-                <li>Xeyriyyə tədbirləri və dəstək kampaniyaları</li>
-                <li>Mədəni tədbirlər və festivallar</li>
+                <li><strong>Seminarlar:</strong> Qarabağ tarixi və mədəniyyəti ilə bağlı mütəxəssis görüşləri və ictimai müzakirələr.</li>
+                <li><strong>Xeyriyyə tədbirləri:</strong> Qarabağda məcburi köçkün ailələrinə dəstək məqsədilə kampaniyalar.</li>
+                <li><strong>Mədəni proqramlar:</strong> Ənənəvi musiqi və rəqs tədbirləri, Qarabağ mətbəxi günləri.</li>
+                <li><strong>Gənclər üçün proqramlar:</strong> Qarabağ mövzulu esse və rəsim müsabiqələri.</li>
             </ul>
         </section>
         <section id="contact">
             <h2>Əlaqə</h2>
-            <p>Email: <a href="mailto:info@qarabaglilardernegi.az">info@qarabaglilardernegi.az</a></p>
-            <p>Telefon: +994 50 123 45 67</p>
-            <p>Ünvan: Bakı şəhəri, Nizami küçəsi 123</p>
+            <p>Bizimlə əlaqə saxlamaq üçün aşağıdakı məlumatlardan istifadə edə bilərsiniz:</p>
+            <p><strong>Email:</strong> <a href="mailto:info@qarabaglilardernegi.az">info@qarabaglilardernegi.az</a></p>
+            <p><strong>Telefon:</strong> +994 50 123 45 67</p>
+            <p><strong>Ünvan:</strong> Bakı şəhəri, Nizami küçəsi 123</p>
+            <p>Hər hansı bir sualınız və ya təklifiniz varsa, bizə yazmaqdan çəkinməyin!</p>
         </section>
     </div>
     <footer>
         <p>&copy; 2025 Azerbaycan Qarabağlılar Dərnəyi. Bütün hüquqlar qorunur.</p>
+        <p>"Birliyimiz gücümüzdür!"</p>
     </footer>
 </body>
 </html>
