--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             color: #333;
         }
         header {
-            background: #0078d4;
+            background: #008000;
             color: #fff;
             padding: 1rem 0;
             text-align: center;
         }
         nav {
-            background: #005a9e;
+            background: #0000FF;
             padding: 0.5rem 0;
         }
         nav ul {
@@ -49,13 +49,13 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         .container h2 {
-            border-bottom: 2px solid #0078d4;
+            border-bottom: 2px solid #008000;
             padding-bottom: 10px;
         }
         footer {
             text-align: center;
             padding: 1rem 0;
-            background: #0078d4;
+            background: #FF0000;
             color: #fff;
             margin-top: 20px;
         }
