--- a/index.html
+++ b/index.html
@@ -7,22 +7,33 @@
     <title>Azerbaycan Qarabağlılar Dərnəyi</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+            font-family: 'Trebuchet MS', sans-serif;
+            line-height: 1.8;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f9f9f9;
             color: #333;
         }
         header {
-            background: #008000;
+            background: linear-gradient(90deg, #008000, #0000FF);
             color: #fff;
-            padding: 1rem 0;
+            padding: 1.5rem 0;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+        }
+        header p {
+            margin: 0;
+            font-size: 1.2rem;
+            margin-top: 0.5rem;
         }
         nav {
             background: #0000FF;
-            padding: 0.5rem 0;
+            padding: 0.8rem 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         nav ul {
             list-style: none;
@@ -32,35 +43,56 @@
             justify-content: center;
         }
         nav ul li {
-            margin: 0 15px;
+            margin: 0 20px;
         }
         nav ul li a {
             color: #fff;
             text-decoration: none;
             font-weight: bold;
+            font-size: 1rem;
+        }
+        nav ul li a:hover {
+            text-decoration: underline;
         }
         .container {
             width: 90%;
-            max-width: 1200px;
-            margin: 20px auto;
+            max-width: 1100px;
+            margin: 30px auto;
             background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
         }
         .container h2 {
-            border-bottom: 2px solid #008000;
+            border-bottom: 3px solid #008000;
             padding-bottom: 10px;
+            margin-bottom: 20px;
+            color: #008000;
         }
         footer {
             text-align: center;
-            padding: 1rem 0;
-            background: #FF0000;
+            padding: 1.5rem 0;
+            background: linear-gradient(90deg, #FF0000, #008000);
             color: #fff;
-            margin-top: 20px;
+            margin-top: 30px;
+            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
         }
         footer p {
-            margin: 0;
+            margin: 5px 0;
+            font-size: 0.9rem;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        ul li {
+            margin-bottom: 10px;
+        }
+        a {
+            color: #0000FF;
+        }
+        a:hover {
+            text-decoration: none;
+            color: #008000;
         }
     </style>
 </head>
