--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
             text-decoration: none;
             color: #008000;
         }
+        audio {
+            display: block;
+            margin: 20px auto;
+        }
     </style>
 </head>
 <body>
@@ -132,6 +136,10 @@
             <p>Hər hansı bir sualınız və ya təklifiniz varsa, bizə yazmaqdan çəkinməyin!</p>
         </section>
     </div>
+    <audio controls autoplay loop>
+        <source src="qarabag_musiqi.mp3" type="audio/mpeg">
+        Brauzeriniz səs faylını dəstəkləmir.
+    </audio>
     <footer>
         <p>&copy; 2025 Azerbaycan Qarabağlılar Dərnəyi. Bütün hüquqlar qorunur.</p>
         <p>"Birliyimiz gücümüzdür!"</p>
