--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
             <p>Hər hansı bir sualınız və ya təklifiniz varsa, bizə yazmaqdan çəkinməyin!</p>
         </section>
     </div>
-    <audio controls autoplay loop>
-        <source src="Karabakh Azeribaijan(_2U3eIMAyLqc_).m4a" type="audio/mpeg">
+    <audio autoplay loop>
+        <source src="Karabakh_Azerbaijan(_2U3eIMAyLqc_).m4a" type="audio/mp4">
         Brauzeriniz səs faylını dəstəkləmir.
     </audio>
     <footer>
