--- a/index.html
+++ b/index.html
@@ -94,8 +94,21 @@
             text-decoration: none;
             color: #008000;
         }
-        audio {
-            display: none;
+        .audio-player {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .audio-player button {
+            background-color: #008000;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+        }
+        .audio-player button:hover {
+            background-color: #005700;
         }
     </style>
     <script>
@@ -104,6 +117,16 @@
             document.body.addEventListener('click', () => {
                 audio.play();
             }, { once: true });
+
+            const playButton = document.getElementById('playAudio');
+            playButton.addEventListener('click', () => {
+                audio.play();
+            });
+
+            const pauseButton = document.getElementById('pauseAudio');
+            pauseButton.addEventListener('click', () => {
+                audio.pause();
+            });
         });
     </script>
 </head>
@@ -142,6 +165,188 @@
             <p><strong>Ünvan:</strong> Bakı şəhəri, Nizami küçəsi 123</p>
             <p>Hər hansı bir sualınız və ya təklifiniz varsa, bizə yazmaqdan çəkinməyin!</p>
         </section>
+        <div class="audio-player">
+            <button id="playAudio">Mahnını Oynat</button>
+            <button id="pauseAudio">Mahnını Dayandır</button>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2025 Azerbaycan Qarabağlılar Dərnəyi. Bütün hüquqlar qorunur.</p>
+        <p>"Birliyimiz gücümüzdür!"</p>
+    </footer>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="az">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Azerbaycan Qarabağlılar Dərnəyi rəsmi veb saytı. Qarabağ mədəniyyəti, tarixi və dəstək fəaliyyətləri ilə bağlı məlumatlar.">
+    <title>Azerbaycan Qarabağlılar Dərnəyi</title>
+    <style>
+        body {
+            font-family: 'Trebuchet MS', sans-serif;
+            line-height: 1.8;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        header {
+            background: linear-gradient(90deg, #008000, #0000FF);
+            color: #fff;
+            padding: 1.5rem 0;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+        }
+        header p {
+            margin: 0;
+            font-size: 1.2rem;
+            margin-top: 0.5rem;
+        }
+        nav {
+            background: #0000FF;
+            padding: 0.8rem 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+        }
+        nav ul li {
+            margin: 0 20px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1rem;
+        }
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+        .container {
+            width: 90%;
+            max-width: 1100px;
+            margin: 30px auto;
+            background: #fff;
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+        }
+        .container h2 {
+            border-bottom: 3px solid #008000;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+            color: #008000;
+        }
+        footer {
+            text-align: center;
+            padding: 1.5rem 0;
+            background: linear-gradient(90deg, #FF0000, #008000);
+            color: #fff;
+            margin-top: 30px;
+            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
+        }
+        footer p {
+            margin: 5px 0;
+            font-size: 0.9rem;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        ul li {
+            margin-bottom: 10px;
+        }
+        a {
+            color: #0000FF;
+        }
+        a:hover {
+            text-decoration: none;
+            color: #008000;
+        }
+        .audio-player {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .audio-player button {
+            background-color: #008000;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+        }
+        .audio-player button:hover {
+            background-color: #005700;
+        }
+    </style>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const audio = new Audio('Karabakh_Azerbaijan(_2U3eIMAyLqc_).m4a');
+            document.body.addEventListener('click', () => {
+                audio.play();
+            }, { once: true });
+
+            const playButton = document.getElementById('playAudio');
+            playButton.addEventListener('click', () => {
+                audio.play();
+            });
+
+            const pauseButton = document.getElementById('pauseAudio');
+            pauseButton.addEventListener('click', () => {
+                audio.pause();
+            });
+        });
+    </script>
+</head>
+<body>
+    <header>
+        <h1>Azerbaycan Qarabağlılar Dərnəyi</h1>
+        <p>Qarabağın zəngin tarixi və mədəniyyətini yaşatmaq üçün birlikdəyik!</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#about">Haqqımızda</a></li>
+            <li><a href="#activities">Fəaliyyətlərimiz</a></li>
+            <li><a href="#contact">Əlaqə</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <section id="about">
+            <h2>Haqqımızda</h2>
+            <p>Azerbaycan Qarabağlılar Dərnəyi, Qarabağın zəngin mədəni irsini tanıtmaq və qorumaq məqsədilə fəaliyyət göstərir. Dərnəyimiz, Qarabağ tarixini, adət-ənənələrini və mədəniyyətini gələcək nəsillərə çatdırmaq üçün müxtəlif layihələr həyata keçirir.</p>
+            <p>Bizim məqsədimiz, Qarabağın dərin köklü mədəniyyətini beynəlxalq aləmdə tanıtmaq və bu istiqamətdə həmvətənlərimiz arasında birlik yaratmaqdır.</p>
+        </section>
+        <section id="activities">
+            <h2>Fəaliyyətlərimiz</h2>
+            <ul>
+                <li><strong>Seminarlar:</strong> Qarabağ tarixi və mədəniyyəti ilə bağlı mütəxəssis görüşləri və ictimai müzakirələr.</li>
+                <li><strong>Xeyriyyə tədbirləri:</strong> Qarabağda məcburi köçkün ailələrinə dəstək məqsədilə kampaniyalar.</li>
+                <li><strong>Mədəni proqramlar:</strong> Ənənəvi musiqi və rəqs tədbirləri, Qarabağ mətbəxi günləri.</li>
+                <li><strong>Gənclər üçün proqramlar:</strong> Qarabağ mövzulu esse və rəsim müsabiqələri.</li>
+            </ul>
+        </section>
+        <section id="contact">
+            <h2>Əlaqə</h2>
+            <p>Bizimlə əlaqə saxlamaq üçün aşağıdakı məlumatlardan istifadə edə bilərsiniz:</p>
+            <p><strong>Email:</strong> <a href="mailto:info@qarabaglilardernegi.az">info@qarabaglilardernegi.az</a></p>
+            <p><strong>Telefon:</strong> +994 50 123 45 67</p>
+            <p><strong>Ünvan:</strong> Bakı şəhəri, Nizami küçəsi 123</p>
+            <p>Hər hansı bir sualınız və ya təklifiniz varsa, bizə yazmaqdan çəkinməyin!</p>
+        </section>
+        <div class="audio-player">
+            <button id="playAudio">Mahnını Oynat</button>
+            <button id="pauseAudio">Mahnını Dayandır</button>
+        </div>
     </div>
     <footer>
         <p>&copy; 2025 Azerbaycan Qarabağlılar Dərnəyi. Bütün hüquqlar qorunur.</p>
