--- a/index.html
+++ b/index.html
@@ -94,41 +94,11 @@
             text-decoration: none;
             color: #008000;
         }
-        .audio-player {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .audio-player button {
-            background-color: #008000;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1rem;
-        }
-        .audio-player button:hover {
-            background-color: #005700;
+        audio {
+            display: block;
+            margin: 20px auto;
         }
     </style>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const audio = new Audio('Karabakh_Azerbaijan(_2U3eIMAyLqc_).m4a');
-            document.body.addEventListener('click', () => {
-                audio.play();
-            }, { once: true });
-
-            const playButton = document.getElementById('playAudio');
-            playButton.addEventListener('click', () => {
-                audio.play();
-            });
-
-            const pauseButton = document.getElementById('pauseAudio');
-            pauseButton.addEventListener('click', () => {
-                audio.pause();
-            });
-        });
-    </script>
 </head>
 <body>
     <header>
@@ -165,11 +135,11 @@
             <p><strong>Ünvan:</strong> Bakı şəhəri, Nizami küçəsi 123</p>
             <p>Hər hansı bir sualınız və ya təklifiniz varsa, bizə yazmaqdan çəkinməyin!</p>
         </section>
-        <div class="audio-player">
-            <button id="playAudio">Mahnını Oynat</button>
-            <button id="pauseAudio">Mahnını Dayandır</button>
-        </div>
     </div>
+    <audio controls autoplay loop>
+        <source src="Karabakh_Azerbaijan(_2U3eIMAyLqc_).m4a" type="audio/mp4">
+        Brauzeriniz səs faylını dəstəkləmir.
+    </audio>
     <footer>
         <p>&copy; 2025 Azerbaycan Qarabağlılar Dərnəyi. Bütün hüquqlar qorunur.</p>
         <p>"Birliyimiz gücümüzdür!"</p>
