--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Trebuchet MS', sans-serif;
-            line-height: 1.8;
+            line-height: 1.6;
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
@@ -17,7 +17,7 @@
         header {
             background: linear-gradient(90deg, #008000, #0000FF);
             color: #fff;
-            padding: 1.5rem 0;
+            padding: 2rem 0;
             text-align: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
@@ -26,13 +26,12 @@
             font-size: 2.5rem;
         }
         header p {
-            margin: 0;
+            margin: 0.5rem 0;
             font-size: 1.2rem;
-            margin-top: 0.5rem;
         }
         nav {
             background: #0000FF;
-            padding: 0.8rem 0;
+            padding: 1rem 0;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         nav ul {
@@ -43,30 +42,29 @@
             justify-content: center;
         }
         nav ul li {
-            margin: 0 20px;
+            margin: 0 15px;
         }
         nav ul li a {
             color: #fff;
             text-decoration: none;
             font-weight: bold;
-            font-size: 1rem;
+            font-size: 1.1rem;
+            transition: color 0.3s;
         }
         nav ul li a:hover {
-            text-decoration: underline;
+            color: #ffd700; /* Altın rengi */
         }
         .container {
-            width: 90%;
-            max-width: 1100px;
+            max-width: 1200px;
             margin: 30px auto;
+            padding: 20px;
             background: #fff;
-            padding: 25px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
         }
         .container h2 {
             border-bottom: 3px solid #008000;
             padding-bottom: 10px;
-            margin-bottom: 20px;
             color: #008000;
         }
         footer {
@@ -87,16 +85,22 @@
         ul li {
             margin-bottom: 10px;
         }
-        a {
-            color: #0000FF;
-        }
-        a:hover {
-            text-decoration: none;
-            color: #008000;
-        }
         audio {
             display: block;
             margin: 20px auto;
+            width: 100%;
+        }
+        @media (max-width: 768px) {
+            nav ul {
+                flex-direction: column;
+                align-items: center;
+            }
+            nav ul li {
+                margin: 10px 0;
+            }
+            header h1 {
+                font-size: 2rem;
+            }
         }
     </style>
 </head>
@@ -136,8 +140,8 @@
             <p>Hər hansı bir sualınız və ya təklifiniz varsa, bizə yazmaqdan çəkinməyin!</p>
         </section>
     </div>
-    <audio controls autoplay loop>
-        <source src="Karabakh_Azerbaijan(_2U3eIMAyLqc_).m4a" type="audio/mp4">
+    <audio controls>
+        <source src="Karabakh_Azerbaijan.m4a" type="audio/mp4">
         Brauzeriniz səs faylını dəstəkləmir.
     </audio>
     <footer>
