--- a/index.html
+++ b/index.html
@@ -1,152 +1,149 @@
 <!DOCTYPE html>
-<html lang="az">
+<html lang="ku">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Azerbaycan Qarabağlılar Dərnəyi rəsmi veb saytı. Qarabağ mədəniyyəti, tarixi və dəstək fəaliyyətləri ilə bağlı məlumatlar.">
-    <title>Azerbaycan Qarabağlılar Dərnəyi</title>
+    <title>Derneka Karabağlıya Azerbaycanê</title>
     <style>
         body {
-            font-family: 'Trebuchet MS', sans-serif;
+            font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background-color: #f4f4f4;
             color: #333;
         }
         header {
-            background: linear-gradient(90deg, #008000, #0000FF);
+            background: #007bff;
             color: #fff;
-            padding: 2rem 0;
+            padding: 10px 0;
             text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-        }
-        header p {
-            margin: 0.5rem 0;
-            font-size: 1.2rem;
         }
         nav {
-            background: #0000FF;
-            padding: 1rem 0;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin: 10px 0;
+            text-align: center;
         }
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-        }
-        nav ul li {
+        nav a {
             margin: 0 15px;
-        }
-        nav ul li a {
-            color: #fff;
+            color: #007bff;
             text-decoration: none;
             font-weight: bold;
-            font-size: 1.1rem;
-            transition: color 0.3s;
         }
-        nav ul li a:hover {
-            color: #ffd700; /* Altın rengi */
-        }
-        .container {
-            max-width: 1200px;
-            margin: 30px auto;
+        section {
             padding: 20px;
             background: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-        }
-        .container h2 {
-            border-bottom: 3px solid #008000;
-            padding-bottom: 10px;
-            color: #008000;
+            margin: 10px;
+            border-radius: 5px;
         }
         footer {
             text-align: center;
-            padding: 1.5rem 0;
-            background: linear-gradient(90deg, #FF0000, #008000);
-            color: #fff;
-            margin-top: 30px;
-            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
-        }
-        footer p {
-            margin: 5px 0;
-            font-size: 0.9rem;
-        }
-        ul {
-            padding-left: 20px;
-        }
-        ul li {
-            margin-bottom: 10px;
-        }
-        audio {
-            display: block;
-            margin: 20px auto;
+            padding: 10px 0;
+            background: #007bff;
+            color: white;
+            position: relative;
+            bottom: 0;
             width: 100%;
         }
-        @media (max-width: 768px) {
-            nav ul {
-                flex-direction: column;
-                align-items: center;
-            }
-            nav ul li {
-                margin: 10px 0;
-            }
-            header h1 {
-                font-size: 2rem;
-            }
+        h2 {
+            color: #007bff;
+        }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 20px;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Azerbaycan Qarabağlılar Dərnəyi</h1>
-        <p>Qarabağın zəngin tarixi və mədəniyyətini yaşatmaq üçün birlikdəyik!</p>
-    </header>
-    <nav>
+
+<header>
+    <h1>Derneka Karabağlıya Azerbaycanê</h1>
+</header>
+
+<nav>
+    <a href="#ana-sayfa">Rêzê Sernavê</a>
+    <a href="#hakkimizda">Li ser me</a>
+    <a href="#etkinlikler">Çalakiyan</a>
+    <a href="#uyelik">Endam</a>
+    <a href="#iletisim">Têkiliyê</a>
+    <a href="#blog">Blog</a>
+</nav>
+
+<div class="container">
+    <section id="ana-sayfa">
+        <h2>Tu Bi Xêr Hatî!</h2>
+        <p>Derneka Karabağlıya Azerbaycanê, kesên ku ji herêma Karabağê hatine, bi hev re hatin ku binketina çandî, civakî û aborî xwe bikişînin. Armancê me ew e ku çanda Karabağê jî xweş bikin û pêdiviyên endamên civakî yên me hilbijêrin. Derneka me, bi çalakiyan û projeyan re çanda zengîn a Karabağê pêşve dike.</p>
+    </section>
+
+    <section id="hakkimizda">
+        <h2>Li ser me</h2>
+        <p>Derneka me di sala 2020-an de hate damezrandin. Armancê me ew e ku nirxên dîrokî û çandî yên herêma Karabağê parastin, civakî di hev re zêde bikin û pêdiviyên endamên me berdewam bikin. Derneka me, bi çalakiyan, seminaran û projeyan re çanda Karabağê tanînin û piştgirî bikin.</p>
+        <h3>Armanca Me</h3>
+        <p>Çanda Karabağê û gelanên wî bi kêmasî bike.</p>
+        <h3>Vîzyona Me</h3>
+        <p>Çand û zengînî yên herêma Karabağê di nav cîhan de nas bikin.</p>
+    </section>
+
+    <section id="etkinlikler">
+        <h2>Çalakiyan</h2>
+        <p>Derneka me her sal çalakiyan cuda-cuda pêşkêş dike. Di vê çalakiyan de hene:</p>
         <ul>
-            <li><a href="#about">Haqqımızda</a></li>
-            <li><a href="#activities">Fəaliyyətlərimiz</a></li>
-            <li><a href="#contact">Əlaqə</a></li>
+            <li><strong>Rojên Çandî:</strong> Çanda Karabağê tanîn.</li>
+            <li><strong>Konseran:</strong> Muzîka Azerbaycanê pêşkêş kirin.</li>
+            <li><strong>Sergeran:</strong> Xelatên hunermendên Karabağê.</li>
+            <li><strong>Seminaran:</strong> Dîrok û çanda Karabağê li ser xebat.</li>
         </ul>
-    </nav>
-    <div class="container">
-        <section id="about">
-            <h2>Haqqımızda</h2>
-            <p>Azerbaycan Qarabağlılar Dərnəyi, Qarabağın zəngin mədəni irsini tanıtmaq və qorumaq məqsədilə fəaliyyət göstərir. Dərnəyimiz, Qarabağ tarixini, adət-ənənələrini və mədəniyyətini gələcək nəsillərə çatdırmaq üçün müxtəlif layihələr həyata keçirir.</p>
-            <p>Bizim məqsədimiz, Qarabağın dərin köklü mədəniyyətini beynəlxalq aləmdə tanıtmaq və bu istiqamətdə həmvətənlərimiz arasında birlik yaratmaqdır.</p>
-        </section>
-        <section id="activities">
-            <h2>Fəaliyyətlərimiz</h2>
-            <ul>
-                <li><strong>Seminarlar:</strong> Qarabağ tarixi və mədəniyyəti ilə bağlı mütəxəssis görüşləri və ictimai müzakirələr.</li>
-                <li><strong>Xeyriyyə tədbirləri:</strong> Qarabağda məcburi köçkün ailələrinə dəstək məqsədilə kampaniyalar.</li>
-                <li><strong>Mədəni proqramlar:</strong> Ənənəvi musiqi və rəqs tədbirləri, Qarabağ mətbəxi günləri.</li>
-                <li><strong>Gənclər üçün proqramlar:</strong> Qarabağ mövzulu esse və rəsim müsabiqələri.</li>
-            </ul>
-        </section>
-        <section id="contact">
-            <h2>Əlaqə</h2>
-            <p>Bizimlə əlaqə saxlamaq üçün aşağıdakı məlumatlardan istifadə edə bilərsiniz:</p>
-            <p><strong>Email:</strong> <a href="mailto:info@qarabaglilardernegi.az">info@qarabaglilardernegi.az</a></p>
-            <p><strong>Telefon:</strong> +994 50 123 45 67</p>
-            <p><strong>Ünvan:</strong> Bakı şəhəri, Nizami küçəsi 123</p>
-            <p>Hər hansı bir sualınız və ya təklifiniz varsa, bizə yazmaqdan çəkinməyin!</p>
-        </section>
-    </div>
-    <audio controls>
-        <source src="Karabakh_Azerbaijan.m4a" type="audio/mp4">
-        Brauzeriniz səs faylını dəstəkləmir.
-    </audio>
-    <footer>
-        <p>&copy; 2025 Azerbaycan Qarabağlılar Dərnəyi. Bütün hüquqlar qorunur.</p>
-        <p>"Birliyimiz gücümüzdür!"</p>
-    </footer>
+        <p>Ji bo hînbûna çalakiyên nû, kerema xwe <a href="#">li vir çalakiyên me bînî</a>.</p>
+    </section>
+
+    <section id="uyelik">
+        <h2>Endam</h2>
+        <p>Kesên ku dixwazin bi derneka me ve girêdayin, şertên endamê me ne:</p>
+        <ul>
+            <li>Mezinbûna 18 salî</li>
+            <li>Ji herêma Azerbaycanê an jî çanda Karabağê hez bikin</li>
+            <li>Rêzimanê derneka me qebûl bikin</li>
+        </ul>
+        <h3>Faydanên Endamê</h3>
+        <p>Faydanên ku em pêşkêş dikin:</p>
+        <ul>
+            <li>Çalakiyan xweş bikin</li>
+            <li>Agahdariyên parve bikin</li>
+            <li>Bi civakî têkiliya xwe bikişînin</li>
+        </ul>
+        <p><a href="#">Forma endamiyê li vir dîtin.</a></p>
+    </section>
+
+    <section id="iletisim">
+        <h2>Têkiliyê</h2>
+        <p>Ji bo têkilî da bi me re, ev agahiyên jêrîn bikar bînin:</p>
+        <ul>
+            <li><strong>Navnîşan:</strong> Derneka Karabağlıya Azerbaycanê, [Navnîşana derneka]</li>
+            <li><strong>Telefon:</strong> [Hejmara telefonê derneka]</li>
+            <li><strong>Email:</strong> [Emailê derneka]</li>
+            <li><strong>Medya Sosyal:</strong> [Girêdanên medya sosyal]</li>
+        </ul>
+    </section>
+
+    <section id="blog">
+        <h2>Blog</h2>
+        <p>Li vir hûn dikarin nivîsarên ku derbarê çalakiyan, nûçeyan û çanda Karabağê ne bibînin.</p>
+        <h3>Çîrokên Nû</h3>
+        <ul>
+            <li><a href="#">Gelekî Zêde Li Ser Çanda Karabağê</a></li>
+            <li><a href="#">Gelûbûnê Muzîka Azerbaycanê</a></li>
+            <li><a href="#">Xwarinên Karabağê û Reçeteyên Wî</a></li>
+        </ul>
+    </section>
+</div>
+
+<footer>
+    <p>&copy; 2025 Derneka Karabağlıya Azerbaycanê. Hemû maf hene.</p>
+</footer>
+
 </body>
 </html>
