--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Derneka Karabağlıya Azerbaycanê</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background: linear-gradient(to bottom right, #f4f4f4, #e9e9e9);
             color: #333;
         }
         header {
@@ -18,11 +18,13 @@
             color: #fff;
             padding: 20px 0;
             text-align: center;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
         nav {
             background: #009e2a; /* Yeşil */
             padding: 15px 0;
             text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         nav a {
             margin: 0 15px;
@@ -32,35 +34,42 @@
             transition: color 0.3s;
         }
         nav a:hover {
-            color: #ff2d00; /* Kırmızı */
-        }
-        section {
-            padding: 20px;
-            background: #fff;
-            margin: 10px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            text-align: center;
-            padding: 10px 0;
-            background: #ff2d00; /* Kırmızı */
-            color: white;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-        h2 {
-            color: #009e2a; /* Yeşil */
-        }
-        ul {
-            list-style-type: disc;
-            padding-left: 20px;
+            color: #ffcc00; /* Sarı */
         }
         .container {
             max-width: 1200px;
             margin: auto;
             padding: 20px;
+        }
+        section {
+            background: white;
+            margin: 20px 0;
+            border-radius: 8px;
+            box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+        footer {
+            text-align: center;
+            padding: 15px 0;
+            background: #ff2d00; /* Kırmızı */
+            color: white;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        h2 {
+            color: #009e2a; /* Yeşil */
+            border-bottom: 2px solid #ffcc00; /* Sarı */
+            padding-bottom: 5px;
+        }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
         }
         .highlight {
             background-color: #ffcc00; /* Sarı */
@@ -71,6 +80,19 @@
         audio {
             display: block;
             margin: 20px auto;
+            width: 100%;
+            max-width: 400px;
+        }
+        .hero {
+            background: url('path/to/your/background-image.jpg') no-repeat center center/cover;
+            height: 300px;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+            border-radius: 8px;
+            margin: 20px 0;
         }
     </style>
 </head>
@@ -90,6 +112,10 @@
 </nav>
 
 <div class="container">
+    <div class="hero">
+        <h2>Karabağ Kültürünü Yaşatalım</h2>
+    </div>
+
     <section id="ana-sayfa">
         <h2>Tu Bi Xêr Hatî!</h2>
         <p>Derneka Karabağlıya Azerbaycanê, kesên ku ji herêma Karabağê hatine, bi hev re hatin ku binketina çandî, civakî û aborî xwe bikişînin. Armancê me ew e ku çanda Karabağê jî xweş bikin û pêdiviyên endamên civakî yên me hilbijêrin. Derneka me, bi çalakiyan û projeyan re çanda zengîn a Karabağê pêşve dike.</p>
