--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <body>
 
 <header>
-    <img src="path/to/logo.png" alt="Azerbaycan Karabağlılar Derneği Logo" class="logo">
+    <img src="logo.png" alt="Azerbaycan Karabağlılar Derneği Logo" class="logo">
     <h1>Azerbaycan Karabağlılar Derneği</h1>
 </header>
 
