--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             color: #333;
         }
         header {
-            background: #00B2E2; /* Mavi */
-            color: #fff;
+            background: #f0f0f0; /* Açık gri */
+            color: #333;
             padding: 20px 0;
             text-align: center;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -133,7 +133,7 @@
 <body>
 
 <header>
-    <img src="dernekLogo.db2b14d536e1f59a9f0087ec3ed7fc1c.svg" alt="Azerbaycan Karabağlılar Derneği Logo" class="logo">
+    <img src="path/to/logo.png" alt="Azerbaycan Karabağlılar Derneği Logo" class="logo">
     <h1>Azerbaycan Karabağlılar Derneği</h1>
 </header>
 
