--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             color: #333;
         }
         header {
-            background: #00B2E2; /* Azerbaycan mavi rengi */
-            color: #fff;
+            background: #d3d3d3; /* Açık gri arka plan */
+            color: #333;
             padding: 20px 0;
             text-align: center;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -25,6 +25,11 @@
             width: 150px; /* Logo genişliği */
             height: auto; /* Yükseklik otomatik */
             margin-bottom: 10px; /* Logo ile başlık arasındaki boşluk */
+        }
+        .banner {
+            width: 100%; /* Banner genişliği */
+            height: auto; /* Yükseklik otomatik */
+            margin-top: 20px; /* Banner ile başlık arasındaki boşluk */
         }
         nav {
             background: #E52B1B; /* Kırmızı */
@@ -132,8 +137,9 @@
 <body>
 
 <header>
-    <img src="path/to/logo.png" alt="Azerbaycan Karabağlılar Derneği Logo" class="logo">
+    <img src="dernekLogo.db2b14d536e1f59a9f0087ec3ed7fc1c.svg" alt="Azerbaycan Karabağlılar Derneği Logo" class="logo">
     <h1>Azerbaycan Karabağlılar Derneği</h1>
+    <img src="path/to/banner-image.jpg" alt="Banner Görseli" class="banner"> <!-- Banner görseli -->
 </header>
 
 <nav>
