--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <header>
     <img src="dernekLogo.db2b14d536e1f59a9f0087ec3ed7fc1c.svg" alt="Azerbaycan Karabağlılar Derneği Logo" class="logo">
     <h1>Azerbaycan Karabağlılar Derneği</h1>
-    <img src="path/to/banner-image.jpg" alt="Banner Görseli" class="banner"> <!-- Banner görseli -->
+    <img src="dernekHomePage.21633a3c2f7161112ea4.webp" alt="Banner Görseli" class="banner"> <!-- Banner görseli -->
 </header>
 
 <nav>
