--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <a href="#blog">Blog</a>
 </nav>
 
-<img src="path/to/banner-image.jpg" alt="Banner Görseli" class="banner"> <!-- Banner görseli -->
+<img src="dernekHomePage.21633a3c2f7161112ea4.webp" alt="Banner Görseli" class="banner"> <!-- Banner görseli -->
 
 <div class="container">
     <div class="hero">
